--- a/Pages/functionTest.html
+++ b/Pages/functionTest.html
@@ -115,7 +115,7 @@
                         <li class="methods-element">quickSort</li>
                     </a>
                     <a href="./typeMethod.html">
-                        <li class="methods-element">typeofMethod</li>
+                        <li class="methods-element">typeMethod</li>
                     </a>
                     <a href="">
                         <li class="methods-element">functionTest</li>
