--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <article class="nav-methods">
 
                 <a href="./Pages/methods.html">
-                    <p>Metodos y funciones</p>
+                    <p style="font-weight: bold;" >Metodos y funciones</p>
                 </a>
 
                 <ul class="methods">
@@ -115,14 +115,14 @@
                         <li class="methods-element">quickSort</li>
                     </a>
                     <a href="./Pages/typeMethod.html">
-                        <li class="methods-element">typeofMethod</li>
+                        <li class="methods-element">typeMethod</li>
                     </a>
                     <a href="./Pages/functionTest.html">
                         <li class="methods-element">functionTest</li>
                     </a>
 
-
                 </ul>
+                
             </article>
             <article>
                 <h1 id="about">
@@ -187,7 +187,7 @@
 
                 <span>
                 </span>
-                de easy Toolsmas informacion sobre modulos javascript <a href="">aqui</a>
+                de easy Toolsmas informacion sobre modulos javascript <a href="https://developer.mozilla.org/es/docs/Web/JavaScript/Guide/Modules" target="_blank" >aqui</a>
             </p>
 
         </section>
