--- a/Pages/perimeterOf.html
+++ b/Pages/perimeterOf.html
@@ -114,7 +114,7 @@
                         <li class="methods-element">quickSort</li>
                     </a>
                     <a href="./typeMethod.html">
-                        <li class="methods-element">typeofMethod</li>
+                        <li class="methods-element">typeMethod</li>
                     </a>
                     <a href="./functionTest.html">
                         <li class="methods-element">functionTest</li>
@@ -267,8 +267,8 @@
                                     class="method">shepere</span><span>(9)</span>)</span>
                             <br>
                             <span class="puntuation">//La salida por consola seria: <br> >>> 56.548 </span>
+
                         </p>
-c
                     </div>
                 </div>
 
