--- a/Pages/queue.html
+++ b/Pages/queue.html
@@ -114,7 +114,7 @@
                         <li class="methods-element">quickSort</li>
                     </a>
                     <a href="./typeMethod.html">
-                        <li class="methods-element">typeofMethod</li>
+                        <li class="methods-element">typeMethod</li>
                     </a>
                     <a href="./functionTest.html">
                         <li class="methods-element">functionTest</li>
