--- a/Pages/methods.html
+++ b/Pages/methods.html
@@ -28,7 +28,7 @@
 
             </div>
 
-            <p class="init">Easy Tools JS</p>
+            <p class="init" style="font-size: 1.7em;">Easy Tools</p>
 
             <nav class="header-nav">
                 <ul class="header-nav-list">
