changes in visual design

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <a href="#" id="js_up" class="to-top">
 
-            <i class="fa fa-rocket" aria-hidden="true">   ^   </i>
+            <i class="fa fa-rocket" aria-hidden="true"> ^ </i>
         </a>
 
 
@@ -58,7 +58,7 @@
             <article class="nav-methods">
 
                 <a href="./Pages/methods.html">
-                    <p style="font-weight: bold;" >Metodos y funciones</p>
+                    <p>Metodos y funciones</p>
                 </a>
 
                 <ul class="methods">
@@ -122,7 +122,7 @@
                     </a>
 
                 </ul>
-                
+
             </article>
             <article>
                 <h1 id="about">
@@ -162,8 +162,8 @@
 
         </section>
         <section>
-            
-            <h2 class="center" id="download">Descargar Easy Tools Js</h2>
+
+            <h2 class="center" id="download" class="download">Descargar Easy Tools Js</h2>
             <article class="download-github">
 
 
@@ -179,27 +179,28 @@
             <br>
         </section>
 
+
         <section class="how-install">
 
             <h3>Como instalar y usar easy tools</h3>
             <p>Lo primero es descargar el paquete ya sea desde github o directamente desde la web</p>
-            <p>Easy tools se instala como cualquier otro modulo de EcmaScript 6.
-
-                <span>
-                </span>
-                de easy Toolsmas informacion sobre modulos javascript <a href="https://developer.mozilla.org/es/docs/Web/JavaScript/Guide/Modules" target="_blank" >aqui</a>
-            </p>
 
         </section>
 
+
         <section>
+
 
             <div class="tutorial">
                 <video src="./Sources/install.mp4" controls width="100%" height="40%"></video>
             </div>
+            <p>Easy tools se instala como cualquier otro modulo de EcmaScript 6.
+                Mas informacion sobre modulos javascript <a
+                    href="https://developer.mozilla.org/es/docs/Web/JavaScript/Guide/Modules" target="_blank">aqui</a>
+            </p>
+
 
         </section>
-
 
 
         <footer>
